<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stock"
        android:icon="@mipmap/stock_ic"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@mipmap/request_ic"
        android:title="@string/title_requests" />

    <item
    android:id="@+id/navigation_shipping"
    android:icon="@mipmap/ship_ic"
    android:title="@string/title_shipping" />

    <item
        android:id="@+id/navigation_invoice"
        android:icon="@mipmap/invoice_ic"
        android:title="@string/title_invoice" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/profile_ic"
        android:title="@string/title_profile" />

</menu>
